--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,21 +1,43 @@
 <app-header></app-header>
+<div class="input-group mb-5 mx-auto" style="width: 600px;">
+  <div class="input-group-prepend">
+    <label class="custom-file-label"  for="inputGroupFileAddon01">Wyślij</label>
+    <input class="input-group-text" [disabled]="isDisabled" (click)="uploadFiles()" id="inputGroupFileAddon01">
+  </div>
+  <div class="custom-file">
+    <input type="file" class="custom-file-input" id="inputGroupFile01" multiple="true"  (change)="selectFiles($event)" aria-describedby="inputGroupFileAddon01">
+    <label class="custom-file-label" for="inputGroupFile01">
+      {{ selectedFiles.length }} file(s) selected
+      <ul>
+        <li *ngFor="let file of selectedFiles">{{ file.name }}</li>
+      </ul>
+    </label>
+
+  </div>
+</div>
+<div class="ml-5">
+      <button type="button" class="btn btn-primary right" (click)="savePositions()">Zapisz ustawienie</button>
+  </div>
+
+
+
 <div class="container">
   <div cdkDropList class="column" #result_1List="cdkDropList" [cdkDropListData]="result_1"
     [cdkDropListConnectedTo]="[result_2List, result_3List]" (cdkDropListDropped)="drop($event)">
     <div class="photo" *ngFor="let photo of result_1" cdkDrag [cdkDragData]="photo">
-      <img src="{{photo.photo}}">
+      <img src="{{readFile(photo.photo)}}">
     </div>
   </div>
   <div class="column" cdkDropList #result_2List="cdkDropList" [cdkDropListData]="result_2"
     [cdkDropListConnectedTo]="[result_3List, result_1List]" (cdkDropListDropped)="drop($event)">
     <div class="photo" *ngFor="let photo of result_2" cdkDrag [cdkDragData]="photo">
-      <img src="{{photo.photo}}">
+      <img src="{{readFile(photo.photo)}}">
     </div>
   </div>
   <div class="column" cdkDropList #result_3List="cdkDropList" [cdkDropListData]="result_3"
     [cdkDropListConnectedTo]="[result_1List, result_2List]" (cdkDropListDropped)="drop($event)">
     <div class="photo" *ngFor="let photo of result_3" cdkDrag [cdkDragData]="photo">
-      <img src="{{photo.photo}}">
+      <img src="{{readFile(photo.photo)}}">
     </div>
   </div>
 </div>
