--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,28 +1,35 @@
-.container{
+.container {
   display: grid;
-  grid-template-columns: repeat(3, minmax(200px, 400px));
-  grid-auto-flow: dense;
-  column-gap: 5px;
-  align-content: center;
+  grid-template-columns: repeat(3, minmax(300px,100%));
+  max-width: 100%;
+  grid-auto-rows: 1fr;
+  /*gap: 5px;*/
   justify-items: stretch;
   justify-content: center;
 }
-.column{
+
+.column {
   display: flex;
-  margin: 0;
-  padding: 0;
   flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: stretch;
   align-items: center;
 }
-.photo{
-  margin: 0;
-  padding: 0;
-}
-.photo img{
-  margin: 0;
-  padding: 0;
+
+.photo {
   width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photo img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(3, minmax(100px, 200px));
+  }
 }
