--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -26,12 +26,15 @@
     <div cdkDropList class="column" #result_1List="cdkDropList" [cdkDropListData]="result_1"
          [cdkDropListConnectedTo]="[result_2List, result_3List]" (cdkDropListDropped)="drop($event)">
         <div class="photo" *ngFor="let photo of result_1" cdkDrag [cdkDragData]="photo">
-            <div class="details" (click)="showOptions(photo)">
+            <div class="details">
+                <div class="button" (click)="showOptions(photo)">
+                    <img class="button-img" src="assets/icons/three-dots.svg">
+                </div>
                 <div class="options" *ngIf="this.optionPhoto === photo">
                     <div class="option" *ngFor="let option of options"
                          (click)="option.function(this.optionPhoto)">
                         <i class="{{option.icon}}"></i>
-                        <p>{{option.name}}</p>
+                        <span>{{option.name}}</span>
                     </div>
                 </div>
             </div>
@@ -43,12 +46,15 @@
     <div class="column" cdkDropList #result_2List="cdkDropList" [cdkDropListData]="result_2"
          [cdkDropListConnectedTo]="[result_3List, result_1List]" (cdkDropListDropped)="drop($event)">
         <div class="photo" *ngFor="let photo of result_2" cdkDrag [cdkDragData]="photo">
-            <div class="details" (click)="showOptions(photo)">
+            <div class="details">
+                <div class="button" (click)="showOptions(photo)">
+                    <img class="button-img" src="assets/icons/three-dots.svg">
+                </div>
                 <div class="options" *ngIf="this.optionPhoto === photo">
                     <div class="option" *ngFor="let option of options"
                          (click)="option.function(this.optionPhoto)">
                         <i class="{{option.icon}}"></i>
-                        <p>{{option.name}}</p>
+                        <span>{{option.name}}</span>
                     </div>
                 </div>
             </div>
@@ -58,12 +64,15 @@
     <div class="column" cdkDropList #result_3List="cdkDropList" [cdkDropListData]="result_3"
          [cdkDropListConnectedTo]="[result_1List, result_2List]" (cdkDropListDropped)="drop($event)">
         <div class="photo" *ngFor="let photo of result_3" cdkDrag [cdkDragData]="photo">
-            <div class="details" (click)="showOptions(photo)">
+            <div class="details">
+                <div class="button" (click)="showOptions(photo)">
+                    <img class="button-img" src="assets/icons/three-dots.svg">
+                </div>
                 <div class="options" *ngIf="this.optionPhoto === photo">
                     <div class="option" *ngFor="let option of options"
                          (click)="option.function(this.optionPhoto)">
                         <i class="{{option.icon}}"></i>
-                        <p>{{option.name}}</p>
+                        <span>{{option.name}}</span>
                     </div>
                 </div>
             </div>
