--- a/frontend/src/app/photos/photos.component.scss
+++ b/frontend/src/app/photos/photos.component.scss
@@ -8,6 +8,16 @@
   justify-content: center;
 }
 
+.container-photo {
+  display: grid;
+  grid-template-columns: repeat(3, 150px);
+  grid-auto-flow: dense;
+  max-width: 100%;
+  align-content: center;
+  justify-items: stretch;
+  justify-content: center;
+}
+
 .details {
   position: absolute;
   right: 0;
