--- a/frontend/src/app/page/about/about.component.css
+++ b/frontend/src/app/page/about/about.component.css
@@ -47,3 +47,8 @@ input[type="submit"]:hover {
     background-color: #45a049;
 }
 
+.about {
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+}
