--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -1,36 +1,85 @@
-.container {
-  display: grid;
-  padding-left: 0;
-  padding-right: 0;
-  grid-template-columns: repeat(3, minmax(300px, 100%));
-  max-width: 100%;
-  grid-auto-rows: 1fr;
-  /*gap: 5px;*/
-  justify-items: stretch;
-  justify-content: center;
-}
+//.container {
+//  display: grid;
+//  padding-left: 0;
+//  padding-right: 0;
+//  grid-template-columns: repeat(3, minmax(300px, 100%));
+//  max-width: 100%;
+//  grid-auto-rows: 1fr;
+//  /*gap: 5px;*/
+//  justify-items: stretch;
+//  justify-content: center;
+//}
+//
+//.column {
+//  display: flex;
+//  flex-direction: column;
+//  align-items: center;
+//}
+//
+//.photo {
+//  width: 100%;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//
+//  img {
+//    width: 100%;
+//    object-fit: cover;
+//  }
+//}
+//
+//
+//@media screen and (max-width: 768px) {
+//  .container {
+//    grid-template-columns: repeat(3, minmax(100px, 200px));
+//  }
+//}
 
-.column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.photo {
+.preview {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
-  img {
-    width: 100%;
-    object-fit: cover;
+  .file-row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-evenly;
+
+    .file {
+      display: flex;
+      justify-content: center;
+      padding: 50px;
+
+      .element {
+        width: 300px;
+        object-fit: contain;
+
+        &.full-width {
+          width: 100%
+        }
+
+        &.full-height {
+          height: 100%;
+        }
+      }
+    }
   }
 }
 
+@media (max-width: 768px) {
+  .preview {
+    .file-row {
+      .file {
+        padding: 10px 0;
 
-@media screen and (max-width: 768px) {
-  .container {
-    grid-template-columns: repeat(3, minmax(100px, 200px));
+        .element {
+          width: 100px;
+
+          &.full-width {
+            width: 100%
+
+          }
+        }
+      }
+    }
   }
 }
