--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -37,46 +37,82 @@
 
 .preview {
   width: 100%;
+  padding: 0 150px;
 
   .file-row {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: center;
+    margin-bottom: 75px;
+
 
     .file {
+      gap: 10%;
       display: flex;
       justify-content: center;
-      padding: 50px;
+      margin-right: 25px;
+
+
+      &.one-column {
+      }
+
+      &.two-column {
+        width: calc(100% / 2);
+      }
+
+      &.three-column {
+        width: calc(100% / 3);
+      }
 
       .element {
-        width: 300px;
+        width: 100%;
         object-fit: contain;
 
         &.full-width {
-          width: 100%
+          width: 100vw;
+          padding: 0 160px;
         }
 
         &.full-height {
-          height: 100%;
+          height: 100vh;
         }
       }
+    }
+
+    .file:last-of-type {
+      margin-right: 0;
     }
   }
 }
 
 @media (max-width: 768px) {
   .preview {
+    padding: 0;
+
     .file-row {
+      margin-bottom: 15px;
+
       .file {
-        padding: 10px 0;
+        margin-right: 5px;
+
+        &.one-column {
+        }
+
+        &.two-column {
+          width: 50vw;
+        }
+
+        &.three-column {
+          width: calc(100% / 3);
+        }
 
         .element {
-          width: 100px;
+          width: 100%;
 
           &.full-width {
-            width: 100%
-
+            width: 100vw;
+            padding: 0;
           }
         }
       }
