--- a/frontend/src/app/newphoto/newphoto.component.css
+++ b/frontend/src/app/newphoto/newphoto.component.css
@@ -46,15 +46,39 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 30px;
+}
+
+.header {
+    width: 100%;
+    padding: 5px 0;
+    border: solid 1px #ccc;
+    border-radius: 4px;
+    text-align: center;
+    background: #007bff;
+    color: white;
+    text-transform: capitalize;
+
+    & span {
+
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 .other-column {
+
+
     .row-list {
-        width: 220px;
+        /*width: 220px;*/
         border: solid 1px #ccc;
-        min-height: 300px;
-        background: white;
+        min-height: 60px;
+        /*background: white;*/
         border-radius: 4px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+        justify-content: space-between;
     }
 
     .row-box {
@@ -71,14 +95,6 @@
         font-size: 14px;
         flex-grow: 1;
         flex-basis: 0;
-
-        .full-width {
-            width: 100%;
-        }
-
-        .full-height {
-            height: 100%;
-        }
     }
 
     .cdk-drag-preview {
@@ -103,11 +119,9 @@
     }
 
     .row-box-placeholder {
-        width: 150px;
-        height: 150px;
+        min-height: 60px;
         background: #ccc;
         border: dotted 3px #999;
-        min-height: 60px;
         transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
     }
 
@@ -119,6 +133,10 @@
     align-content: center;
     flex-direction: column;
     align-items: center;
+
+    .add-row {
+        margin-top: 10px;
+    }
 
 
     .row-list {
@@ -160,8 +178,9 @@
         .full-height {
             height: 100%;
         }
-        .file-image{
-            &.active{
+
+        .file-image {
+            &.active {
                 border: #BD362F 3px solid;
             }
         }
@@ -206,9 +225,9 @@
 
     .file-row {
         display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-evenly;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-evenly;
 
         .file {
             display: flex;
